--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -1,9 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Mitr:wght@200;300;400;500;600;700&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 @layer base {
   :root {
+    --font-sans: 'Mitr';
+    
     --background: 0 0% 100%;
     --foreground: 210 11% 11%;
 
